link to files fixed

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,11 +1,11 @@
 <div class="logo">
-    <a href="/index.html">
-        <img src="/img/logo.png" alt="Logo">
+    <a href="index.html">
+        <img src="img/logo.png" alt="Logo">
     </a>
 </div>
 
 <div class="favorites">
-    <a href="/favorites/index.html">
+    <a href="favorites/index.html">
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-tag-starred" width="55" height="55"
             viewBox="0 0 24 24" stroke-width="1.5" stroke="#000" fill="none" stroke-linecap="round"
             stroke-linejoin="round">
