--- a/partials/header.html
+++ b/partials/header.html
@@ -1,5 +1,5 @@
 <div class="logo">
-    <a href="index.html">
+    <a href="../index.html">
         <img src="../img/logo.png" alt="Logo">
     </a>
 </div>
