--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,6 @@
 <div class="logo">
-    <a href="./index.html">
-        <img src="../img/logo.png" alt="Logo">
+    <a href="/index.html">
+        <img src="/img/logo.png" alt="Logo">
     </a>
 </div>
 
