--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,23 @@ button:hover {
         width: 250px;
         padding: 15px 30px;
     }
+
+    .logo img {
+        width: 85%;
+    }
+
+    .favorites svg {
+        width: 50px;
+        height: auto;
+    }
+
+    .hero h1 {
+        font-size: 35px;
+    }
+
+    .hero h2 {
+        font-size: 30px;
+    }
 }
 
 @media (max-width: 600px) {
@@ -190,6 +207,23 @@ button:hover {
 
     button {
         width: 90%;
+    }
+
+    .logo img {
+        width: 65%;
+    }
+
+    .favorites svg {
+        width: 45px;
+        height: auto;
+    }
+
+    .hero h1 {
+        font-size: 27px;
+    }
+
+    .hero h2 {
+        font-size: 22px;
     }
 }
 
