--- a/css/styles.css
+++ b/css/styles.css
@@ -179,10 +179,6 @@ button:hover {
         padding: 15px 30px;
     }
 
-    .logo img {
-        width: 85%;
-    }
-
     .favorites svg {
         width: 50px;
         height: auto;
@@ -194,6 +190,10 @@ button:hover {
 
     .hero h2 {
         font-size: 30px;
+    }
+
+    .logo {
+        width: 200px;
     }
 }
 
@@ -209,10 +209,6 @@ button:hover {
         width: 90%;
     }
 
-    .logo img {
-        width: 65%;
-    }
-
     .favorites svg {
         width: 45px;
         height: auto;
@@ -224,6 +220,10 @@ button:hover {
 
     .hero h2 {
         font-size: 22px;
+    }
+
+    .logo {
+        width: 150px;
     }
 }
 
