--- a/css/styles.css
+++ b/css/styles.css
@@ -217,6 +217,14 @@ footer {
     transform: translateY(0);
 }
 
+/* Item in favorites */
+
+.item-in-fav {
+    margin-left: -5px;
+    width: 35px;
+    height: 35px;
+    display: none;
+}
 
 /* Media Queries */
 @media (max-width: 1200px) {
@@ -229,7 +237,7 @@ footer {
         padding: 15px 30px;
     }
 
-    .favorites svg {
+    .favorites svg:first-of-type {
         width: 50px;
         height: auto;
     }
@@ -271,7 +279,7 @@ footer {
         width: 90%;
     }
 
-    .favorites svg {
+    .favorites svg:first-of-type {
         width: 45px;
         height: auto;
     }
